<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mike</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_progress">Progress</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="current_weight">Current Weight:</string>
    <string name="routine_name_hint">Routine Name</string>
    <string name="weight_unit">Lb/Kg</string>
    <string name="label_upload_photos">Upload Photos:</string>
    <string name="workout_name">Workout Day Name</string>
    <string name="workout_days">Workout Days</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="rest">Rest</string>
    <string name="add">+</string>
    <string name="notes">Notes</string>
    <string name="weight">Weight</string>
    <string name="no_routines">You have no routines</string>

    <string name="confirmation_goBack">Go back?</string>
    <string name="lose_data_warning">All your unsaved data will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lose_related_data">Are you sure you want to delete? You will lose all related data.</string>
    <string name="delete">Delete</string>

    <string name="action_timer">Timer</string>
    <string name="action_timer_button">Timer Button</string>

    <!-- Button Text -->
    <string name="add_button">+</string>
    <string name="continue_button">Continue</string>
    <string name="discard_button">Discard</string>

    <string name="action_new">New</string>

    <string name="new_album">New Album</string>

    <string name="confirmation_incomplete_workout">Incomplete Workout</string>
    <string name="incomplete_workout_body">You haven\'t completed every exercise. Do you still want to save workout?</string>

</resources>
