<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <!-- Routine entry table row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/routine_name_hint"
                android:gravity="center_horizontal"
                android:maxLength="30"
                android:textSize="30pt"
                android:id="@+id/routineName"
                android:inputType="textMultiLine"/>
        </TableRow>


        <!-- Current Weight entry -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/weightTag"
                        android:gravity="center_horizontal"
                        android:layout_alignParentTop="true"
                        android:text="@string/current_weight"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textSize="23pt"
                        android:gravity="center_horizontal"
                        android:maxLength="3"
                        android:ems="3"
                        android:layout_below="@id/weightTag"
                        android:id="@+id/currentWeight"
                        android:layout_centerHorizontal="true" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_below="@id/currentWeight"
                        android:text="@string/weight_unit"/>
                </RelativeLayout>

        </TableRow>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_upload_photos"
        android:gravity="center_horizontal"
        android:layout_above="@+id/picGallery"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/picGallery"
        android:orientation="horizontal"
        android:layout_above="@+id/buttonHolder">
        <Button
            android:layout_width="50dip"
            android:layout_height="125dip"
            android:text="@string/add_button"
            android:id="@+id/addButton" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fillViewport="true"
            android:measureAllChildren="false"
            android:scrollbars="none" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/horizontalGallery">
                </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@id/buttonHolder"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight=".5"
            android:text="@string/discard_button"
            android:id="@+id/cancelButton"/>


        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/continue_button"
            android:id="@+id/saveButton"/>
    </LinearLayout>


</RelativeLayout>