<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/inputField"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workoutName"
            android:inputType="textCapWords"
            android:hint="@string/workout_name"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="2dip"
            android:background="#3d3d3d"
            android:textColor="#cfcfca"
            android:textColorHint="#adadad"
            android:textSize="25sp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listWorkouts"
            android:listSelector="@android:drawable/divider_horizontal_bright">
        </ListView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@id/inputField"
        android:weightSum="1">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:inputType="textCapWords"
            android:hint="@string/exercise_name"
            android:id="@+id/exerciseName" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:gravity="center_horizontal"
                android:ems="10"
                android:maxLines="1"
                android:maxLength="2"
                android:hint="@string/sets"
                android:id="@+id/sets"
                android:layout_weight=".3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:maxLength="7"
                android:hint="@string/reps"
                android:ems="10"
                android:id="@+id/reps"
                android:layout_weight=".3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:maxLength="6"
                android:hint="@string/rest"
                android:ems="10"
                android:id="@+id/restTime"
                android:layout_weight=".3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addButton"
                android:src="@drawable/add_button"
                android:background="@android:color/transparent"
                android:text="@string/add"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>