<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weightTag"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:text="@string/current_weight"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="23pt"
                android:gravity="center_horizontal"
                android:maxLength="6"
                android:ems="4"
                android:layout_below="@id/weightTag"
                android:id="@+id/currentWeight"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/currentWeight"
                android:text="@string/weight_unit"/>
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_upload_photos"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="125dip"
            android:orientation="horizontal">
            <Button
                android:layout_width="50dip"
                android:layout_height="match_parent"
                android:text="@string/add_button"
                android:id="@+id/addButton" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fillViewport="true"
                android:measureAllChildren="false"
                android:scrollbars="none" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/horizontalGallery">
                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>